[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["shafnyai <shafnymhd@proton.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.115.2"}
pydantic = "^2.9.2"
loguru = "^0.7.2"
pandas = "^2.2.3"
requests = "^2.32.3"
pyarrow = "^17.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
